--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -166,8 +166,6 @@ bind-key g switch-client -l
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 
-bind-key \; command-prompt
-
 # '[' copy-mode
 # ']' paste-buffer
 # '#' list-buffers
@@ -210,9 +208,9 @@ bind-key o previous-window
 # pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
 bind-key -r H resize-pane -L 4
+bind-key -r U resize-pane -R 4
 bind-key -r J resize-pane -D 4
 bind-key -r K resize-pane -U 4
-bind-key -r N resize-pane -R 4
 
 # pane_split_bindings
 # https://github.com/tmux-plugins/tmux-pain-control/blob/master/screenshots/pane_splitting.gif
@@ -229,7 +227,9 @@ bind-key "_" split-window -fv -c "#{pane_current_path}"
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key -r ">" swap-window -t :+
 bind-key -r "<" swap-window -t :-
-bind-key ":" swap-window -t 0
+# bind-key \; swap-window -t 0
+# bind-key \; command-prompt
+
 
 # pane_navigation_bindings
 bind-key h select-pane -L
@@ -287,6 +287,7 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
+set -g @tpm-update "&"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run '~/.tmux/plugins/tpm/tpm'
