tmux: C-] send-prefix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -204,6 +204,9 @@ bind-key l select-pane -t :.-
 bind-key p select-pane -t :.+
 # o is symmetric with n
 bind-key o previous-window
+# -a = with alert
+bind-key M-o previous-window -a
+bind-key M-p rotate-window -a
 
 # pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
@@ -240,7 +243,7 @@ bind-key k select-pane -U
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 # bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 # bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
@@ -254,7 +257,10 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)
 
 # send prefix key to nested tmux session
 # <C-Space><C-Space> (whithout depressing ctrl)
-bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+# bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+bind-key C-Space send-prefix
+# bind-key -n C-\ send-prefix
+bind-key -n C-] send-prefix
 
 # bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
@@ -262,9 +268,9 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 # bind-key u send-keys C-l
 
 # quick layouts preset
-bind-key M-v select-layout even-horizontal
-bind-key M-h select-layout even-vertical
-bind-key M-t select-layout tiled
+# bind-key M-v select-layout even-horizontal
+# bind-key M-h select-layout even-vertical
+# bind-key M-t select-layout tiled
 
 # default: q display-panes
 bind-key -r q next-layout
