--- a/tmux_ssh/.tmux.conf
+++ b/tmux_ssh/.tmux.conf
@@ -243,7 +243,7 @@ bind-key k select-pane -U
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 # bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 # bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
@@ -257,10 +257,11 @@ bind-key k select-pane -U
 
 # send prefix key to nested tmux session
 # <C-Space><C-Space> (whithout depressing ctrl)
-# bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
-bind-key C-Space send-prefix
-# bind-key -n C-\ send-prefix
-bind-key -n C-] send-prefix
+bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+
+# Easy send-prefix for nested tmux session, for example over ssh
+# bind-key -n C-_ if-shell "$is_vim" "send-keys C-_" "send-prefix"
+bind-key -n C-_ send-prefix
 
 # bind-key -n C-l send-keys "C-c"
 # Restoring Clear Screen (C-l)
