tmux version with cut

--- a/tmux_ssh/.tmux.conf
+++ b/tmux_ssh/.tmux.conf
@@ -24,7 +24,7 @@
 # -------------------------------------------------------------------
 # TMUX_VERSION
 # -------------------------------------------------------------------
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | awk '{ print $2 }')"
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -d' ' -f2)"
 
 # -------------------------------------------------------------------
 # Session options
@@ -47,7 +47,7 @@ set-option -g xterm-keys on
 # source-file -q ~/.tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
-set-option -s escape-time 0
+set-option -sg escape-time 25
 
 # increase scrollback buffer size
 set-option -g history-limit 30000
@@ -161,7 +161,8 @@ if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
 bind-key Space last-window
 
 # default: L switch-client -l
-bind-key g switch-client -l
+# default: l last-window
+bind-key l switch-client -l
 
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -200,7 +201,7 @@ bind-key r swap-pane -s !
 
 # jump between panes
 # default: o select-pane -t :.+
-bind-key l select-pane -t :.-
+bind-key g select-pane -t :.-
 bind-key p select-pane -t :.+
 # o is symmetric with n
 bind-key o previous-window
