M-* as fzf locate

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -131,8 +131,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "[tmux #{version}] reload
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
-# -n is an alias for -T root, means bypass prefix
-bind-key -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+bind-key M-* run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # Capture pane and open in nvim
 bind-key M-c run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt' \; new-window "nvim /tmp/tmux-capture.txt"
@@ -261,6 +260,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 
 # Easy send-prefix for nested tmux session, for example over ssh
+# -n is an alias for -T root, means bypass prefix
 # bind-key -n C-_ if-shell "$is_vim" "send-keys C-_" "send-prefix"
 bind-key -n C-_ send-prefix
 
