--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -162,6 +162,8 @@ bind-key Space last-window
 # default: L switch-client -l
 # default: l last-window
 bind-key l switch-client -l
+bind-key g switch-client -n
+bind-key p switch-client -p
 
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -199,14 +201,18 @@ bind-key T break-pane
 bind-key r swap-pane -s !
 
 # jump between panes
+# default: ; last-pane
+bind-key Tab last-pane
+bind-key = list-panes -a
+bind-key \; display-panes
 # default: o select-pane -t :.+
-bind-key g select-pane -t :.-
-bind-key p select-pane -t :.+
+bind-key ) select-pane -t :.+
+bind-key ( select-pane -t :.-
 # o is symmetric with n
 bind-key o previous-window
 # -a = with alert
-bind-key M-o previous-window -a
-bind-key M-p rotate-window -a
+# bind-key M-o previous-window -a
+# bind-key M-p rotate-window -a
 
 # pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
@@ -231,8 +237,6 @@ bind-key "_" split-window -fv -c "#{pane_current_path}"
 bind-key -r ">" swap-window -t :+
 bind-key -r "<" swap-window -t :-
 bind-key @ swap-window -t 0
-# bind-key \; command-prompt
-
 
 # pane_navigation_bindings
 bind-key h select-pane -L
@@ -277,13 +281,10 @@ bind-key -n C-_ send-prefix
 # default: q display-panes
 bind-key -r q next-layout
 bind-key -r Q previous-layout
-# mnemonic buffer indices
-bind-key b display-panes
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-# if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source-file ~/.tmux-theme-${BACKGROUND}.conf
+source-file -q ~/.tmux-theme-${BACKGROUND}.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -295,7 +296,7 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
-set -g @tpm-update "&"
+set -g @tpm-update "L"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run '~/.tmux/plugins/tpm/tpm'
