--- a/tmux_ssh/.tmux.conf
+++ b/tmux_ssh/.tmux.conf
@@ -131,8 +131,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "[tmux #{version}] reload
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
-# -n is an alias for -T root, means bypass prefix
-bind-key -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+bind-key M-* run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # Capture pane and open in nvim
 bind-key M-c run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt' \; new-window "nvim /tmp/tmux-capture.txt"
@@ -163,6 +162,8 @@ bind-key Space last-window
 # default: L switch-client -l
 # default: l last-window
 bind-key l switch-client -l
+bind-key g switch-client -n
+bind-key p switch-client -p
 
 unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -200,14 +201,18 @@ bind-key T break-pane
 bind-key r swap-pane -s !
 
 # jump between panes
+# default: ; last-pane
+bind-key Tab last-pane
+bind-key = list-panes -a
+bind-key \; display-panes
 # default: o select-pane -t :.+
-bind-key g select-pane -t :.-
-bind-key p select-pane -t :.+
+bind-key ) select-pane -t :.+
+bind-key ( select-pane -t :.-
 # o is symmetric with n
 bind-key o previous-window
 # -a = with alert
-bind-key M-o previous-window -a
-bind-key M-p rotate-window -a
+# bind-key M-o previous-window -a
+# bind-key M-p rotate-window -a
 
 # pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
@@ -231,9 +236,7 @@ bind-key "_" split-window -fv -c "#{pane_current_path}"
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key -r ">" swap-window -t :+
 bind-key -r "<" swap-window -t :-
-# bind-key \; swap-window -t 0
-# bind-key \; command-prompt
-
+bind-key @ swap-window -t 0
 
 # pane_navigation_bindings
 bind-key h select-pane -L
@@ -261,6 +264,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 
 # Easy send-prefix for nested tmux session, for example over ssh
+# -n is an alias for -T root, means bypass prefix
 # bind-key -n C-_ if-shell "$is_vim" "send-keys C-_" "send-prefix"
 bind-key -n C-_ send-prefix
 
@@ -277,13 +281,10 @@ bind-key -n C-_ send-prefix
 # default: q display-panes
 bind-key -r q next-layout
 bind-key -r Q previous-layout
-# mnemonic buffer indices
-bind-key b display-panes
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-# if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source-file ~/.tmux-theme-${BACKGROUND}.conf
+source-file -q ~/.tmux-theme-${BACKGROUND}.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -295,7 +296,7 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
-set -g @tpm-update "&"
+set -g @tpm-update "L"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run '~/.tmux/plugins/tpm/tpm'
