F keys to switch windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -127,7 +127,7 @@ set-window-option -g automatic-rename-format "#{b:pane_title}"
 bind-key C new-window -c "#{pane_current_path}"
 
 # shortcut for reloading config
-bind-key R source-file ~/.tmux.conf \; display-message "[tmux #{version}] reloaded ~/.tmux.conf"
+bind-key M-r source-file ~/.tmux.conf \; display-message "[tmux #{version}] reloaded ~/.tmux.conf"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
@@ -160,19 +160,18 @@ if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
 bind-key Space last-window
 
 # default: L switch-client -l
-# default: l last-window
-bind-key l switch-client -l
+# default: q display-panes
+bind-key q switch-client -l
 bind-key g switch-client -n
 bind-key p switch-client -p
 
-unbind-key &
+# unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 
 # '[' copy-mode
 # ']' paste-buffer
 # '#' list-buffers
 # '=' choose-buffer
-bind-key * choose-buffer
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
@@ -192,27 +191,40 @@ bind-key E join-pane
 # mnemonic: exchange
 bind-key e join-pane -s !
 
+# swap the last active pane/window with the current window.
+bind-key S swap-pane -s !
+
 # Move pane to new Tab(window)
 # default: ! break-pane
 bind-key T break-pane
 
-# swap the last active pane/window with the current window.
-# default: r refresh-client
-bind-key r swap-pane -s !
-
 # jump between panes
 # default: ; last-pane
 bind-key Tab last-pane
-bind-key = list-panes -a
+bind-key '"' list-panes -a
 bind-key \; display-panes
 # default: o select-pane -t :.+
-bind-key ) select-pane -t :.+
-bind-key ( select-pane -t :.-
+bind-key -r ) select-pane -t :.+
+bind-key -r ( select-pane -t :.-
 # o is symmetric with n
-bind-key o previous-window
+bind-key -r o previous-window
+bind-key -r n next-window
 # -a = with alert
-# bind-key M-o previous-window -a
-# bind-key M-p rotate-window -a
+# bind-key M-p previous-window -a
+# bind-key M-o rotate-window -D
+bind-key M-o previous-window -a
+bind-key -r r rotate-window -D
+
+bind-key * select-window -t :=0
+bind-key F1 select-window -t :=1
+bind-key F2 select-window -t :=2
+bind-key F3 select-window -t :=3
+bind-key F4 select-window -t :=4
+bind-key F5 select-window -t :=5
+bind-key F6 select-window -t :=6
+bind-key F7 select-window -t :=7
+bind-key F8 select-window -t :=8
+bind-key F9 select-window -t :=9
 
 # pane_resizing_bindings
 # https://github.com/tmux-plugins/tmux-pain-control
@@ -227,16 +239,16 @@ bind-key -r K resize-pane -U 4
 bind-key a split-window -h -c "#{pane_current_path}"
 bind-key A split-window -fh -c "#{pane_current_path}"
 # default: - delete-buffer
-bind-key "-" split-window -v -c "#{pane_current_path}"
-bind-key "_" split-window -fv -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
+bind-key _ split-window -fv -c "#{pane_current_path}"
 # bind-key "%" split-window -h -c "#{pane_current_path}"
 # bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # window_move_bindings
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind-key -r ">" swap-window -t :+
-bind-key -r "<" swap-window -t :-
-bind-key @ swap-window -t 0
+bind-key -r > swap-window -t :+
+bind-key -r < swap-window -t :-
+bind-key 0 swap-window -t 0
 
 # pane_navigation_bindings
 bind-key h select-pane -L
@@ -276,11 +288,11 @@ bind-key -n C-_ send-prefix
 # quick layouts preset
 # bind-key M-v select-layout even-horizontal
 # bind-key M-h select-layout even-vertical
-# bind-key M-t select-layout tiled
+bind-key M-t select-layout tiled
 
-# default: q display-panes
-bind-key -r q next-layout
-bind-key -r Q previous-layout
+# default: l last-window
+bind-key -r + next-layout
+bind-key -r l previous-layout
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
@@ -296,7 +308,7 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
 
-set -g @tpm-update "L"
+set -g @tpm-update "@"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run '~/.tmux/plugins/tpm/tpm'
