--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -286,8 +286,8 @@ bind-key -n C-_ send-prefix
 # bind-key u send-keys C-l
 
 # quick layouts preset
-# bind-key M-v select-layout even-horizontal
 # bind-key M-h select-layout even-vertical
+bind-key M-v select-layout even-horizontal
 bind-key M-t select-layout tiled
 
 # default: l last-window
