tmux: better version check

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -148,12 +148,21 @@ bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of wi
 # C-d   = halfpage-down
 # C-u   = halfpage-up
 
-is_tmux_modern='expr $TMUX_VERSION \>= 2.4'
+# is_tmux_modern='expr ${TMUX_VERSION##*.} \>= 4'
+is_tmux_modern='[ ${TMUX_VERSION%%.*} -eq 2 -a ${TMUX_VERSION##*.} -ge 4 ]'
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection" "bind -tvi-copy y copy-selection"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Bspace send -X halfpage-up" "bind -tvi-copy Bspace halfpage-up"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Tab send -X halfpage-down" "bind -tvi-copy Tab halfpage-down"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi J send -X -N5 cursor-down"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
+
+# '[' copy-mode
+# ']' paste-buffer
+# '#' list-buffers
+# '=' choose-buffer
+bind-key g copy-mode
+bind-key p paste-buffer
+bind-key b list-buffers
 
 # switch to last window
 # default: Space next-layout
