switch copy-mode to g

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -127,7 +127,7 @@ set-window-option -g automatic-rename-format "#{b:pane_title}"
 bind-key C new-window -c "#{pane_current_path}"
 
 # shortcut for reloading config
-bind-key M-r source-file ~/.tmux.conf \; display-message "[tmux #{version}] reloaded ~/.tmux.conf"
+bind-key R source-file ~/.tmux.conf \; display-message "[tmux #{version}] reloaded ~/.tmux.conf"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
@@ -171,16 +171,9 @@ bind-key Space last-window
 # default: L switch-client -l
 # default: q display-panes
 bind-key q switch-client -l
-bind-key g switch-client -n
-bind-key p switch-client -p
 
 # unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
-
-# '[' copy-mode
-# ']' paste-buffer
-# '#' list-buffers
-# '=' choose-buffer
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
@@ -212,9 +205,11 @@ bind-key T break-pane
 bind-key Tab last-pane
 bind-key '"' list-panes -a
 bind-key \; display-panes
+# default: [ copy-mode
+# default: ] paste-buffer
+bind-key -r ] select-pane -t :.+
+bind-key -r [ select-pane -t :.-
 # default: o select-pane -t :.+
-bind-key -r ) select-pane -t :.+
-bind-key -r ( select-pane -t :.-
 # o is symmetric with n
 bind-key -r o previous-window
 bind-key -r n next-window
