disable reattach to user space

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g xterm-keys on
 
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/8
-source-file -q ~/.tmux-osx.conf
+# source-file -q ~/.tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set-option -sg escape-time 25
