--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -153,8 +153,8 @@ is_tmux_modern='[ ${TMUX_VERSION%%.*} -eq 2 -a ${TMUX_VERSION##*.} -ge 4 ]'
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection" "bind -tvi-copy y copy-selection"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Bspace send -X halfpage-up" "bind -tvi-copy Bspace halfpage-up"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Tab send -X halfpage-down" "bind -tvi-copy Tab halfpage-down"
-if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi J send -X -N5 cursor-down"
-if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi K send -X -N5 cursor-up"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi C-j send -X -N5 cursor-down"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi C-k send -X -N5 cursor-up"
 
 # '[' copy-mode
 # ']' paste-buffer
