copy-selection-and-cancel

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -150,7 +150,7 @@ bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of wi
 
 # is_tmux_modern='expr ${TMUX_VERSION##*.} \>= 4'
 is_tmux_modern='[ ${TMUX_VERSION%%.*} -eq 2 -a ${TMUX_VERSION##*.} -ge 4 ]'
-if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection" "bind -tvi-copy y copy-selection"
+if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi y send -X copy-selection-and-cancel" "bind -tvi-copy y copy-selection"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Bspace send -X halfpage-up" "bind -tvi-copy Bspace halfpage-up"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi Tab send -X halfpage-down" "bind -tvi-copy Tab halfpage-down"
 if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi C-j send -X -N5 cursor-down"
