--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -193,8 +193,12 @@ bind-key E join-pane
 # mnemonic: exchange
 bind-key e join-pane -s !
 
+bind-key S swap-pane
+
 # swap the last active pane/window with the current window.
-bind-key S swap-pane -s !
+bind-key s swap-pane -s !
+
+bind-key W choose-tree -Zs
 
 # Move pane to new Tab(window)
 # default: ! break-pane
