prefix_highlight_show_copy_mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -92,11 +92,6 @@ set-option -g history-limit 14000
 # Mouse
 set-option -g mouse on
 
-# remove administrative debris (session name, hostname, time) in status bar
-# set -g status-left '#{version}'
-# set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
-# set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
-# set-option -g status-right '#{prefix_highlight} | #(xkbswitch -ge) | %a %d-%m-%Y %H:%M'
 set -g status-right '#{prefix_highlight}#{cpu_bg_color}#{cpu_fg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
 # -------------------------------------------------------------------
@@ -265,19 +260,8 @@ bind-key u select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
 
-# Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-# bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-# bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-# bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-# bind-key -n C-c if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# bind-key -Tcopy-mode-vi C-h select-pane -L
-# bind-key -Tcopy-mode-vi C-j select-pane -D
-# bind-key -Tcopy-mode-vi C-k select-pane -U
-# bind-key -Tcopy-mode-vi C-c select-pane -R
-# bind-key -Tcopy-mode-vi C-\ select-pane -l
 
 # send prefix key to nested tmux session
 # <C-Space><C-Space> (whithout depressing ctrl)
@@ -287,11 +271,6 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 # -n is an alias for -T root, means bypass prefix
 # bind-key -n C-_ if-shell "$is_vim" "send-keys C-_" "send-prefix"
 bind-key -n C-_ send-prefix
-
-# bind-key -n C-l send-keys "C-c"
-# Restoring Clear Screen (C-l)
-# mnemonic <C-u> clears line in zsh
-# bind-key u send-keys C-l
 
 # quick layouts preset
 # bind-key M-h select-layout even-vertical
@@ -315,6 +294,9 @@ set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'thalesmello/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'jbnicolai/tmux-fpp'
+
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=white,bg=yellow,bold'
 
 set -g @tpm-update "@"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
