M-d capture-pane and open in kak

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -127,7 +127,7 @@ bind-key R source-file ~/.tmux.conf \; display-message "[tmux #{version}] reload
 bind-key M-* run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # Capture pane and open in nvim
-bind-key M-c run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt' \; new-window "nvim /tmp/tmux-capture.txt"
+bind-key M-d run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt' \; new-window "kak /tmp/tmux-capture.txt"
 
 # Screen capture
 bind-key M-s run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
@@ -271,8 +271,8 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 bind-key -n C-_ send-prefix
 
 # quick layouts preset
-# bind-key M-h select-layout even-vertical
-bind-key M-v select-layout even-horizontal
+bind-key M-v select-layout even-vertical
+bind-key M-c select-layout even-horizontal
 bind-key M-t select-layout tiled
 
 # default: l last-window
@@ -281,7 +281,7 @@ bind-key -r l previous-layout
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-source-file -q ~/.tmux-theme-${BACKGROUND}.conf
+source-file -q ${DOTFILES}/tmux/tmux-theme-${BACKGROUND}.conf
 
 set -g status-right '#{prefix_highlight}#{cpu_bg_color}#{cpu_fg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
