tmux: " choose-buffer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -155,7 +155,8 @@ if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi C-k send -X -N5 cursor-up"
 # '=' choose-buffer
 bind-key g copy-mode
 bind-key p paste-buffer
-bind-key b list-buffers
+# bind-key b list-buffers
+bind-key '"' choose-buffer
 
 # switch to last window
 # default: Space next-layout
@@ -200,7 +201,6 @@ bind-key T break-pane
 # jump between panes
 # default: ; last-pane
 bind-key Tab last-pane
-bind-key '"' list-panes -a
 bind-key \; display-panes
 # default: [ copy-mode
 # default: ] paste-buffer
