default-terminal tmux-256color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,12 +29,16 @@ run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -d' ' -f2)"
 # -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
-# ~/dotfiles/resources/screen-256color.terminfo
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "xterm-screen-256color"
+# set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 
 # Add truecolor support (tmux info | rg Tc)
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -sa terminal-overrides ',xterm-256color:Tc'
+
+# this probably only needs to happen in OS X
+set-option -sa terminal-overrides ',xterm*:sitm=\E[3m'
 
 # <S-Home><S-End>
 # set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
@@ -47,7 +51,7 @@ set-option -g xterm-keys on
 # source-file -q ~/.tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
-set-option -sg escape-time 25
+set-option -s escape-time 25
 
 # increase scrollback buffer size
 set-option -g history-limit 30000
@@ -164,7 +168,7 @@ bind-key Space last-window
 
 # default: L switch-client -l
 # default: q display-panes
-bind-key q switch-client -l
+bind-key \; switch-client -l
 
 # unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -201,7 +205,7 @@ bind-key T break-pane
 # jump between panes
 # default: ; last-pane
 bind-key Tab last-pane
-bind-key \; display-panes
+bind-key b display-panes
 # default: [ copy-mode
 # default: ] paste-buffer
 bind-key -r ] select-pane -t :.+
