tmux: space command prompt

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -157,18 +157,19 @@ if-shell "$is_tmux_modern" "bind -Tcopy-mode-vi C-k send -X -N5 cursor-up"
 # ']' paste-buffer
 # '#' list-buffers
 # '=' choose-buffer
-bind-key g copy-mode
-bind-key p paste-buffer
-# bind-key b list-buffers
+bind-key Y copy-mode
+bind-key y paste-buffer
 bind-key '"' choose-buffer
+# bind-key b list-buffers
 
-# switch to last window
 # default: Space next-layout
-bind-key Space last-window
+# bind-key Space last-window
+bind-key Tab last-window
+bind-key BTab switch-client -l
+bind-key Space command-prompt
 
 # default: L switch-client -l
-# default: q display-panes
-bind-key \; switch-client -l
+# bind-key \; switch-client -l
 
 # unbind-key &
 bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
@@ -185,11 +186,10 @@ bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
 # Marked pane must be present (prefix-m), for the following to work
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
 # mnemonic: exchange
-bind-key E join-pane
+bind-key P join-pane
 
 # join the last active pane/window to the current window.
-# mnemonic: exchange
-bind-key e join-pane -s !
+bind-key p join-pane -s !
 
 bind-key S swap-pane
 
@@ -200,12 +200,13 @@ bind-key W choose-tree -Zs
 
 # Move pane to new Tab(window)
 # default: ! break-pane
-bind-key T break-pane
+bind-key T break-pane -P
 
 # jump between panes
 # default: ; last-pane
-bind-key Tab last-pane
-bind-key b display-panes
+# bind-key BSpace last-pane
+# default: q display-panes
+# bind-key b display-panes
 # default: [ copy-mode
 # default: ] paste-buffer
 bind-key -r ] select-pane -t :.+
