'e' as last-pane

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -163,10 +163,11 @@ bind-key '"' choose-buffer
 # bind-key b list-buffers
 
 # default: Space next-layout
-# bind-key Space last-window
-bind-key Tab last-window
-bind-key BTab switch-client -l
-bind-key Space command-prompt
+# bind-key Tab last-window
+# bind-key BTab switch-client -l
+bind-key Space last-window
+bind-key Tab switch-client -l
+bind-key Enter command-prompt
 
 # default: L switch-client -l
 # bind-key \; switch-client -l
@@ -204,6 +205,7 @@ bind-key T break-pane -P
 
 # jump between panes
 # default: ; last-pane
+bind-key e last-pane
 # bind-key BSpace last-pane
 # default: q display-panes
 # bind-key b display-panes
@@ -217,9 +219,10 @@ bind-key -r o previous-window
 bind-key -r n next-window
 # -a = with alert
 # bind-key M-p previous-window -a
-# bind-key M-o rotate-window -D
 bind-key M-o previous-window -a
-bind-key -r r rotate-window -D
+# bind-key M-o rotate-window -D
+# bind-key -r r rotate-window -D
+bind-key -r r rotate-window
 
 bind-key * select-window -t :=0
 bind-key F1 select-window -t :=1
