e E last-pane combo

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -206,6 +206,7 @@ bind-key T break-pane -P
 # jump between panes
 # default: ; last-pane
 bind-key e last-pane
+bind-key E last-pane \; resize-pane -Z
 # bind-key BSpace last-pane
 # default: q display-panes
 # bind-key b display-panes
@@ -279,8 +280,9 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 bind-key -n C-_ send-prefix
 
 # quick layouts preset
-bind-key M-v select-layout even-vertical
-bind-key M-c select-layout even-horizontal
+bind-key = select-layout -E
+bind-key v select-layout even-horizontal
+bind-key V select-layout even-vertical
 bind-key M-t select-layout tiled
 
 # default: l last-window
