--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -201,7 +201,7 @@ bind-key W choose-tree -Zs
 
 # Move pane to new Tab(window)
 # default: ! break-pane
-bind-key T break-pane -P
+bind-key T break-pane
 
 # jump between panes
 # default: ; last-pane
