--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -291,7 +291,7 @@ bind-key -r l previous-layout
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-source-file -q ${DOTFILES}/tmux/tmux-theme-${BACKGROUND}.conf
+source-file -q ~/dotfiles/tmux/tmux-theme-light.conf
 
 set -g status-right '#{prefix_highlight}#{cpu_bg_color}#{cpu_fg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
