--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ set-option -g default-terminal "tmux-256color"
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
 set-option -sa terminal-overrides ',xterm-256color:Tc'
 
-# this probably only needs to happen in OS X
+# this probably only needs to happen in OS X (correct italic)
 set-option -sa terminal-overrides ',xterm*:sitm=\E[3m'
 
 # <S-Home><S-End>
