aux tmux files in .tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,7 +48,7 @@ set-option -sa terminal-overrides ',xterm*:sitm=\E[3m'
 set-option -g xterm-keys on
 
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/8
-# source-file -q ~/.tmux-osx.conf
+# source-file -q ~/.tmux/tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set-option -s escape-time 25
@@ -291,7 +291,7 @@ bind-key -r l previous-layout
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-source-file -q ~/dotfiles/tmux/tmux-theme-light.conf
+source-file -q ~/.tmux/tmux-theme-light.conf
 
 set -g status-right '#{prefix_highlight}#{cpu_bg_color}#{cpu_fg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
